--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKER_HUB_USERNAME }}/webhook:latest
-            ${{ secrets.DOCKER_HUB_USERNAME }}/webhook:${GITHUB_SHA}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/webhook:${{ github.sha }}
